feat(smart-file): SmartFileApi增加获取文件地址功能